--- a/src/test/resources/Config/config_qa.properties
+++ b/src/test/resources/Config/config_qa.properties
@@ -2,5 +2,5 @@ browser=edge
 url=https://qa.services.bluebrix.healthcare/mf/platform
 username=sugumarraja10@blueehr.com
 password= Abcd@1234
-incognito= false
+incognito= true
 headless= false
